--- a/MyTouch/Info.plist
+++ b/MyTouch/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>media</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
