--- a/MyTouch/Info.plist
+++ b/MyTouch/Info.plist
@@ -20,6 +20,11 @@
 	<string>6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>media</string>
 	<key>UIBackgroundModes</key>
